# notifyx-be

./: .env.example  .gitignore  API_TESTING.md  CHANGELOG_CORS_AUTH.md  MIGRATIONS.md  QUICK_START.md  README.md  SEEDER.md  alembic.ini  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_contacts.csv  seed.py  seed_data.py  test_api.py
alembic/: env.py
alembic/versions/: 845b614cb739_initial_migration_with_fixed_schema.py  9b1608f5d11d_initial_migration.py  add_contact_fields_and_import_jobs.py  v1_complete_schema_update.py
app/: celery_app.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py  analytics.py  auth.py  campaigns.py  contact_fields.py  contacts.py  emails.py  imports.py  templates.py  tracking.py  webhooks.py
app/core/: config.py  security.py  test_token.py
app/db/: database.py  seeder.py
app/models/: __init__.py  campaign.py  contact.py  contact_field.py  import_job.py  template.py  user.py
app/schemas/: __init__.py  campaign.py  contact.py  contact_field.py  import_job.py  template.py  user.py
app/services/: analytics_service.py  email_service.py  field_validation.py  tracking_service.py
app/tasks/: __init__.py  email_tasks.py  import_tasks.py
