[project]
name = "backend"
version = "0.1.0"
description = "Email Communication Platform Backend"
authors = [
    {name = "SanjeevVE",email = "sanjeeveswaramoorthy@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.13.1,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (>=4.1.2,<5.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "boto3 (>=1.42.25,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "asyncpg (>=0.29.0,<1.0.0)"
]

[tool.setuptools]
packages = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
